fixed mobile spacing and tag colot issue

--- a/stories/Molecules/SDG/sdg.scss
+++ b/stories/Molecules/SDG/sdg.scss
@@ -85,10 +85,10 @@
       background-color: #dda63a;
 
       .gradient {
-        background-image:
-          linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+        background-image: 
+        linear-gradient(270deg,
+          rgba(222,168,60,0),
+          rgba(222,168,60,0) 80%,
           #dda63a);
       }
     }
@@ -97,11 +97,11 @@
       background-color: #4c9f38;
 
       .gradient {
-        background-image:
-          linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
-          #4c9f38);
+        background-image: 
+        linear-gradient(270deg,
+        rgba(78,159,56,0),
+        rgba(78,159,56,0) 80%,
+        #4e9f38);
       }
     }
 
@@ -121,10 +121,10 @@
       background-color: #ff3a21;
 
       .gradient {
-        background-image:
-          linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+        background-image: 
+        linear-gradient(270deg,
+          rgba(255,60,35,0),
+          rgba(255,60,35,0) 80%,
           #ff3a21);
       }
     }
@@ -133,10 +133,10 @@
       background-color: #26bde2;
 
       .gradient {
-        background-image:
-          linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+        background-image: 
+        linear-gradient(270deg,
+          rgba(39,189,227,0),
+          rgba(39,189,227,0) 80%,
           #26bde2);
       }
     }
@@ -145,10 +145,10 @@
       background-color: #fcc30b;
 
       .gradient {
-        background-image:
-          linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+        background-image: 
+        linear-gradient(270deg,
+          rgba(253,195,10,0),
+          rgba(253,195,10,0) 80%,
           #fcc30b);
       }
     }
@@ -157,11 +157,11 @@
       background-color: #a21942;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
-          #a21942);
+          rgba(162,24,67,0),
+          rgba(162,24,67,0) 80%,
+          #a21843);
       }
     }
 
@@ -169,10 +169,10 @@
       background-color: #fd6925;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+          rgba(254,105,36,0),
+          rgba(254,105,36,0) 80%,
           #fd6925);
       }
     }
@@ -183,8 +183,8 @@
       .gradient {
         background-image:
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+          rgba(222,21,104,0),
+          rgba(222,21,104,0) 80%,
           #dd1367);
       }
     }
@@ -193,10 +193,10 @@
       background-color: #fd9d24;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+          rgba(254,156,37,0),
+          rgba(254,156,37,0) 80%,
           #fd9d24);
       }
     }
@@ -205,10 +205,10 @@
       background-color: #bf8b2e;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+          rgba(191,139,46,0),
+          rgba(191,139,46,0) 80%,
           #bf8b2e);
       }
     }
@@ -217,10 +217,10 @@
       background-color: #3f7e44;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+          rgba(62,128,69,0),
+          rgba(62,128,69,0) 80%,
           #3f7e44);
       }
     }
@@ -229,10 +229,10 @@
       background-color: #0a97d9;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+          rgba(12,152,218,0),
+          rgba(12,152,218,0) 80%,
           #0a97d9);
       }
     }
@@ -241,11 +241,11 @@
       background-color: #56c02b;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
-          #56c02b);
+          rgba(88,193,44,0),
+          rgba(88,193,44,0) 80%,
+          #58c12c);
       }
     }
 
@@ -253,10 +253,10 @@
       background-color: #00689d;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
+          rgba(3,104,157,0),
+          rgba(3,104,157,0) 80%,
           #00689d);
       }
     }
@@ -265,11 +265,11 @@
       background-color: #19486a;
 
       .gradient {
-        background-image:
+        background-image: 
           linear-gradient(270deg,
-          rgba(228, 37, 58, 0),
-          rgba(228, 37, 58, 0) 10%,
-          #19486a);
+          rgba(26,73,107,0),
+          rgba(26,73,107,0) 80%,
+          #1a496b);
       }
     }
 
